# bazel-intellij-sample

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
src/main/java/com/vmware/sample/: Application.java  Swagger.java
src/main/java/com/vmware/sample/controller/: UserController.java
src/main/java/com/vmware/sample/model/: Race.java  Sex.java  User.java
src/main/java/com/vmware/sample/service/: ApiService.java  UserService.java
src/main/java/com/vmware/sample/utils/: Response.java  StatusCode.java
src/test/java/com/vmware/sample/controller/: UserControllerTest.java
